environments/template/aap-instance/base/eda_route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-sandbox
    argocd.argoproj.io/sync-wave: "4"
  name: ${BRANCH_NAME}-${TEAM_NAME}-${INSTANCE_ID}-eda
  labels:
    app.kubernetes.io/managed-by: eda-operator
    app.kubernetes.io/part-of: ${BRANCH_NAME}-${TEAM_NAME}-${INSTANCE_ID}-eda
    app.kubernetes.io/name: ${BRANCH_NAME}-${TEAM_NAME}-${INSTANCE_ID}-eda
    app.kubernetes.io/operator-version: '2.4'
    app.kubernetes.io/instance: ${BRANCH_NAME}-${TEAM_NAME}-${INSTANCE_ID}-eda
spec:
  host: ${TEAM_NAME}-eda-${INSTANCE_ID}.${APP_URL}
  to:
    kind: Service
    name: ${BRANCH_NAME}-${TEAM_NAME}-${INSTANCE_ID}-eda-ui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
